Fixed bug where FLOOR could brick itself by setting invalid , this fix should make this less likely to happen, options now also get properly stored within FLOOR, fixed SCUFF not properly handling empty action:jump_ settings

--- a/css/game.css
+++ b/css/game.css
@@ -110,6 +110,7 @@
 .dev img {
     width: 100%;
     object-fit: scale-down;
+    transition: .2s;
 }
 
 .dev .image {
@@ -118,9 +119,8 @@
     border-color: black;
     background-color: beige;
     margin: 20px;
-    transition: .2s;
 }
 
-.dev .image:hover{
-    width: 450px;
+.dev img:hover{
+    scale: 2;
 }
